...
    }
  };

  const getLabel = () => {
    switch (mode) {
      case "WALK":
        return "Walk";
      case "BIKE":
        return "Bike";
      case "CAR":
        return "Car";
      case "BUS":
        return "Bus";
      case "SHUTTLE":
        return "Shuttle";
    }
  };

  return (
    <Pressable
      onPress={onSelect}
...
