...
      enableDynamicSizing={false}
      initialSnapIndex={1}
      onPressAction={onPressAction}
      onSnapIndexChange={onSnapIndexChange}
    >
      <View>
        <Text style={styles.smallText}>Estimated Time Arrival</Text>
        <Text style={styles.bigText}>{calculateETA(duration)}</Text>
        <Text style={styles.smallText}>Distance</Text>
        <Text style={styles.bigText}>{distance}</Text>
      </View>
    </BottomDrawer>
  );
};

...
