...
                style={[
                  styles.directionsBtn,
                  { backgroundColor: colors.primary },
                ]}
              >
                <FontAwesome5 name="directions" size={18} color="white" />
                <Text style={styles.directionsText}>Directions</Text>
              </Pressable>
            ) : null}
          </View>
          <View style={{ height: 8 }} />
          <Pressable
            style={[styles.logoutBtn, { backgroundColor: colors.primary }]}
...
