...

export function getLanguageLabel(lang: LanguageCode): string {
  return lang === "fr" ? "Français (CA)" : "English (US)";
}

export function getCampusLabel(campus: CampusCode): string {
  return campus === "LOYOLA" ? "Loyola Campus" : "Sir George Williams Campus";
}

